# terraform-ec2

./: .gitignore  Makefile  README.md  S3_SETUP.md  main.tf  outputs.tf  s3-config.env  sync-s3.sh  terraform.tfvars.example  variables.tf  versions.tf
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_tables.py  debug_models.py  deploy-simple.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  drop_all_tables_force.py  env.example  nginx.conf  pyproject.toml  test_auth_example.py  test_connection.py
backend/alembic/: env.py
backend/alembic/versions/: b5171378a784_create_all_models_with_proper_base.py
backend/scripts/: deploy-vm.sh  init-db.sh  setup-database.sh  setup-neon.sh  test-api.sh  test-docker.sh
backend/src/: __init__.py  main.py
backend/src/models/: __init__.py  base.py  bookmark.py  feedback.py  like.py  message.py  post.py  url_bookmark.py  user.py
backend/src/repositories/: __init__.py  message_repository.py  user_repository.py
backend/src/utils/: auth.py  database.py  example_usage.py  logging_manager.py  s3_manager.py
backend/tests/: conftest.py  test_api.py  test_database.py
infrastructure/: Makefile  README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/.ssh/: terraform-ec2-key  terraform-ec2-key.pub
infrastructure/modules/ec2/: main.tf  outputs.tf  user-data.sh  variables.tf
infrastructure/scripts/: deploy-secure.sh  generate-ssh-keys.sh
modules/ec2/: dev-setup.sh  main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf
scripts/: setup-aws.sh  setup-s3.sh
(+8 files in other folders)
